# MARL-Swarm

./: .gitignore  HUTTENRAUCH_IMPLEMENTATION_STATUS.md  README.md  analyze_architecture_scalability.py  analyze_embedding_scaling.py  analyze_experiments.ipynb  analyze_rendezvous_embedding.py  begin.py  begin_rendezvous.py  compare_embedding_scaling.py  experiment_configs.py  pyproject.toml  rendezvous_analysis.ipynb  requirements.txt  run_architecture_scalability_continuation.py  run_architecture_scalability_experiments.py  run_demo_experiments.py  run_experiments.py  run_experiments_parallel.sh  run_rendezvous.py  setup_swarm_env.sh  test.py  testinguwu.py  train_rendezvous.py
analysis/: __init__.py  generalization_eval.py  generalization_loading.py  generalization_resolver.py  log_loading.py  rliable_eval.py  run_analysis.py  run_comparison.py  run_generalization.py
analysis/tests/: test_generalization.py  test_rliable_eval.py
environments/base/: agent_handler.py  base_environment.py
environments/pursuit/: __init__.py  evasion_agent.py  pursuit_env.py  pursuit_evasion_env.py
environments/rendezvous/: observations_vectorized.py  rendezvous_env.py
environments/tests/: conftest.py
environments/tests/test_base/: test_agent_handler.py
environments/tests/test_pursuit/: smoketest.py  test_environment.py  test_rewards.py
environments/tests/test_rendezvous/: smoketest.py  test_observations.py  test_observations_standalone.py  test_rewards.py  test_termination.py
envs/base/: agent.py  entity.py  environment.py  test_agent.py
envs/evader/: evader_environment.py  test_evader_environment.py
envs/evader/agents/: evader_agent.py  pursuer_agent.py  test_pursuer_agent.py
envs/rendezvous/: rendezvous_environment.py  test_rendezvous_environment.py
envs/rendezvous/agents/: rendezvous_agent.py  test_rendezvous_agent.py
envs/test/: test_env.py  test_environment.py
evaluation/: __init__.py  plotting.py  run_scalability_experiment.py  utils.py
logs/huttenrauch_local_extended_tight/PPO_1/: events.out.tfevents.1763382905.DESKTOP-UPCLCCN.300565.0  events.out.tfevents.1763389152.DESKTOP-UPCLCCN.346804.0
models/: huttenrauch_local_extended_tight_vecnormalize.pkl  local_extended_20_agents_vecnormalize.pkl
policies/: meanEmbeddingExtractor.py  mean_embedding.py  mean_embedding_extractor.py  mlp_policy_mean_embedding.py
results/comparison_embedding_rendezvous_ppo/: aggregate_summary.csv  iqm_by_size.csv  probability_of_improvement.csv  raw_scores.csv  summary.txt
results/embedding_scaling_rendezvous_100agents_ppo/: aggregate_summary.csv  probability_of_improvement.csv  raw_scores.csv  summary.txt
results/generalization_cube/: cube.csv  summary.txt
results/generalization_embedding_scaling_rendezvous_100agents_ppo/: aggregated.csv  raw_episodes.csv  summary.txt
results/generalization_embedding_scaling_rendezvous_16agents_ppo/: aggregated.csv  raw_episodes.csv  summary.txt
results/generalization_embedding_scaling_rendezvous_4agents_ppo/: aggregated.csv  raw_episodes.csv  summary.txt
results/generalization_embedding_scaling_rendezvous_50agents_ppo/: aggregated.csv  raw_episodes.csv  summary.txt
training/: common_train_utils.py  config_utils.py  evaluate_pursuit_evasion.py  evaluate_rendezvous.py  pursuit_evasion_train_utils.py  rendezvous_train_utils.py  train_pursuit_evasion.py  train_rendezvous.py
training/configs/: README.md  architecture_scalability.json  architecture_scalability_extended.json  architecture_scalability_pursuit_evasion.json  architecture_scalability_pursuit_evasion_100agents.json  architecture_scalability_pursuit_evasion_16agents.json  architecture_scalability_pursuit_evasion_4agents.json  architecture_scalability_pursuit_evasion_50agents.json  architecture_scalability_pursuit_evasion_extended.json  architecture_scalability_rendezvous.json  architecture_scalability_rendezvous_100agents.json  architecture_scalability_rendezvous_16agents.json  architecture_scalability_rendezvous_4agents.json  architecture_scalability_rendezvous_50agents.json  depth_scaling.json  edge_cases.json  embed_scaling.json  embedding_scaling_pursuit_evasion.json  embedding_scaling_pursuit_evasion_100agents.json  embedding_scaling_pursuit_evasion_100agents_ppo.json  embedding_scaling_pursuit_evasion_16agents.json  embedding_scaling_pursuit_evasion_16agents_ppo.json  embedding_scaling_pursuit_evasion_4agents.json  embedding_scaling_pursuit_evasion_4agents_ppo.json  embedding_scaling_pursuit_evasion_50agents.json  embedding_scaling_pursuit_evasion_50agents_ppo.json  embedding_scaling_pursuit_evasion_extended.json  embedding_scaling_rendezvous.json  embedding_scaling_rendezvous_100agents.json  embedding_scaling_rendezvous_100agents_ppo.json  embedding_scaling_rendezvous_16agents.json  embedding_scaling_rendezvous_16agents_ppo.json  embedding_scaling_rendezvous_4agents.json  embedding_scaling_rendezvous_4agents_ppo.json  embedding_scaling_rendezvous_50agents.json  embedding_scaling_rendezvous_50agents_ppo.json  embedding_scaling_rendezvous_extended.json  huttenrauch_baseline.json  huttenrauch_baseline_pursuit_evasion.json  huttenrauch_baseline_rendezvous.json  (+10 more)
(+626 files in other folders)
