[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marl-swarm"
version = "0.1.0"
description = "Multi-Agent Reinforcement Learning Swarm Environments"
requires-python = ">=3.8"
dependencies = [
    # "numpy",
    # "pygame",
    # "gymnasium", 
    # "pettingzoo",
    # "pytest",
]

[tool.setuptools.packages.find]
where = ["."]